@@ -32,6 +32,7 @@ Default image should not displayed on listing detail preview page - FIXED
 Changes to implement location import/export for multilocations - CHANGED
 Not able to create new custom field with type checkbox if default value entered - FIXED
 GeoDirectory Session class added to manage sessions - ADDED
+Deleting custom field not deletes the field from sorting fields table - FIXED
 
 v1.5.6
 In add listing form sub-categories are no longer showing in hierarchy for checkbox display type - FIXED
